feat: implement TS, build process and update project structure

--- a/package.json
+++ b/package.json
@@ -2,5 +2,13 @@
   "name": "twitch-ads-mute-extension",
   "version": "0.1.0",
   "description": "Auto mutes Twitch livestream when ads play",
-  "license": "ISC"
+  "license": "ISC",
+  "scripts": {
+    "build": "node build.mjs"
+  },
+  "devDependencies": {
+    "chrome-types": "^0.1.320",
+    "esbuild": "^0.27.3",
+    "typescript": "^5.4.5"
+  }
 }
