--- a/manifest.json
+++ b/manifest.json
@@ -4,27 +4,27 @@
   "version": "0.1.0",
   "description": "Logs Twitch channel info from live pages.",
   "action": {
-    "default_popup": "src/popup/index.html",
+    "default_popup": "dist/popup/index.html",
     "default_title": "Twitch ads muter",
     "default_icon": {
-      "16": "icons/icon16.png",
-      "32": "icons/icon32.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
+      "16": "dist/icons/icon16.png",
+      "32": "dist/icons/icon32.png",
+      "48": "dist/icons/icon48.png",
+      "128": "dist/icons/icon128.png"
     }
   },
   "icons": {
-    "16": "icons/icon16.png",
-    "32": "icons/icon32.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "dist/icons/icon16.png",
+    "32": "dist/icons/icon32.png",
+    "48": "dist/icons/icon48.png",
+    "128": "dist/icons/icon128.png"
   },
   "permissions": ["activeTab"],
   "host_permissions": ["https://www.twitch.tv/*"],
   "content_scripts": [
     {
       "matches": ["https://www.twitch.tv/*"],
-      "js": ["src/content.js"],
+      "js": ["dist/content.js"],
       "run_at": "document_idle"
     }
   ]
