--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,12 @@
   },
   "permissions": ["activeTab"],
   "host_permissions": ["https://www.twitch.tv/*"],
+  "web_accessible_resources": [
+    {
+      "resources": ["settings.defaults.json", "settings.json"],
+      "matches": ["https://www.twitch.tv/*"]
+    }
+  ],
   "content_scripts": [
     {
       "matches": ["https://www.twitch.tv/*"],
