feat: implement build process with chokidar for file watching and debounce support (dev mode)

--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "license": "ISC",
   "scripts": {
     "lint": "eslint .",
-    "build": "node build.mjs"
+    "build": "node build.mjs",
+    "dev": "node build.mjs --watch"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
     "chrome-types": "^0.1.320",
+    "chokidar": "^3.6.0",
     "esbuild": "^0.27.3",
     "eslint": "^8.57.1",
     "typescript": "^5.4.5"
