--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,8 @@
     "noEmitOnError": true,
     "rootDir": "src",
     "outDir": "dist",
-    "types": ["chrome-types"],
+    "types": ["chrome-types", "vitest/globals"],
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts"],
 }
