--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,13 +2,13 @@ name: tests
 
 on:
   push:
-    branches:
-      - main
   pull_request:
+    types: [opened, synchronize, reopened]
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request' || !startsWith(github.event.head_commit.message, 'Merge pull request')
     steps:
       - name: Checkout
         uses: actions/checkout@v4
